--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "author": "klaus dwight",
   "license": "ISC",
   "dependencies": {
+    "google-map-react": "^0.31.0",
+    "google-maps-react": "^1.1.2",
     "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-autocomplete": "^1.0.15",
+    "react-google-maps": "^9.4.5",
     "react-weather": "^0.1.3"
   },
   "devDependencies": {
