--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.2.0",
     "react-google-autocomplete": "^1.0.15",
     "react-google-maps": "^9.4.5",
+    "react-md": "^1.2.11",
     "react-weather": "^0.1.3"
   },
   "devDependencies": {
