--- a/package.json
+++ b/package.json
@@ -11,15 +11,11 @@
   "author": "klaus dwight",
   "license": "ISC",
   "dependencies": {
-    "google-map-react": "^0.31.0",
     "google-maps-react": "^1.1.2",
-    "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-google-autocomplete": "^1.0.15",
-    "react-google-maps": "^9.4.5",
-    "react-md": "^1.2.11",
-    "react-weather": "^0.1.3"
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -28,7 +24,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
-    "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
